chore: add authentication with supabase

--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -7,11 +7,11 @@ SUPABASE_SERVICE_KEY=
 RESEND_API_KEY=
 
 # Upstash
-UPSTASH_REDIS_REST_URL=
-UPSTASH_REDIS_REST_TOKEN=
+UPSTASH_REDIS_REST_URL=https://humble-swan-49863.upstash.io
+UPSTASH_REDIS_REST_TOKEN=AcLHAAIjcDE3OTZhOThjOTlkYTY0NDNmODQxMDUxNTIyYjQzMDk1ZXAxMA
 
 # Dub
-DUB_API_KEY=
+DUB_API_KEY=dub_9TAStp31r43BrZAOfW0vlAY2
 
 # OpenPanel
 NEXT_PUBLIC_OPENPANEL_CLIENT_ID=
