--- a/apps/api/supabase/config.toml
+++ b/apps/api/supabase/config.toml
@@ -12,6 +12,7 @@ site_url = "http://localhost:3000"
 additional_redirect_urls = ["https://localhost:3000", "http://localhost:54321/auth/v1/callback"]
 jwt_expiry = 36000
 
+
 [db]
 port = 54322
 
@@ -22,6 +23,12 @@ port = 54323
 enabled = true
 client_id = "env(GOOGLE_CLIENT_ID)"
 secret = "env(GOOGLE_SECRET)"
+redirect_uri = "http://localhost:54321/auth/v1/callback"
+
+[auth.external.linkedin_oidc]
+enabled = true
+client_id = "env(LINKEDIN_CLIENT_ID)"
+secret = "env(LINKEDIN_SECRET)"
 redirect_uri = "http://localhost:54321/auth/v1/callback"
 
 [auth.email]
