--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -25,7 +25,8 @@
     "nuqs": "^1.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-openapi": "^2.19.0"
   },
   "devDependencies": {
     "@sentry/nextjs": "^8",
