--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -26,7 +26,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zod": "^3.23.8",
-    "zod-openapi": "^2.19.0"
+    "@hookform/resolvers": "^3.9.0",
+    "zod-openapi": "^2.19.0",
+    "react-hook-form": "^7.52.2"
   },
   "devDependencies": {
     "@sentry/nextjs": "^8",
