--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,30 +33,53 @@
     "./dialog": "./src/components/dialog.tsx",
     "./icons": "./src/components/icons.tsx",
     "./label": "./src/components/label.tsx",
+    "./sidebar": "./src/components/navigation/sidebar.tsx",
+    "./sidebar-layout": "./src/components/navigation/sidebar-layout.tsx",
+    "./sidebar-trigger": "./src/components/navigation/sidebar-trigger.tsx",
+    "./nav-main": "./src/components/navigation/nav-main.tsx",
+    "./nav-projects": "./src/components/navigation/nav-projects.tsx",
+    "./nav-secondary": "./src/components/navigation/nav-secondary.tsx",
+    "./nav-user": "./src/components/navigation/nav-user.tsx",
+    "./storage-card": "./src/components/storage-card.tsx",
+    "./select": "./src/components/select.tsx",
+    "./team-switcher": "./src/components/team-switcher.tsx",
+    "./dropdown-menu": "./src/components/dropdown-menu.tsx",
+    "./avatar": "./src/components/avatar.tsx",
+    "./card": "./src/components/card.tsx",
+    "./progress": "./src/components/progress.tsx",
     "./wordmark": "./src/components/wordmark.tsx",
     "./animated-size-container": "./src/components/animated-size-container.tsx",
     "./blur-image": "./src/components/blur-image.tsx",
     "./client-only": "./src/components/client-only.tsx",
     "./popup": "./src/components/popup.tsx",
     "./radio-group": "./src/components/radio-group.tsx",
+    "./form": "./src/components/form.tsx",
     "./tailwind.config": "./tailwind.config.ts",
     "./popover": "./src/components/popover.tsx",
     "./max-width-wrapper": "./src/components/max-width-wrapper.tsx",
     "./postcss": "./postcss.config.js"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-select": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-icons": "^1.1.0",
+    "@tailwindcss/forms": "^0.5.6",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.438.0",
     "tailwind-merge": "^2.5.2",
-    "js-cookie": "^3.0.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.2"
   }
 }
