--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,11 +5,17 @@
     "dev": "supabase start",
     "login": "supabase login",
     "migrate": "supabase migration up",
-    "seed": "supabase db seed generate && supabase db seed run",
+    "seed": "bunx tsx seed.ts > seed.sql",
     "reset": "supabase db reset",
     "generate": "supabase gen types --lang=typescript --local --schema public > ../../packages/supabase/src/types/db.ts"
   },
   "dependencies": {
     "supabase": "^1.191.5"
+  },
+  "devDependencies": {
+    "@snaplet/copycat": "^5.0.0",
+    "@snaplet/seed": "0.98.0",
+    "@types/pg": "^8.11.9",
+    "pg": "^8.12.0"
   }
 }
