--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -21,12 +21,19 @@
     "next": "14.2.7",
     "next-international": "^1.2.4",
     "papaparse": "^5.4.1",
+    "zustand": "^4.5.5",
     "next-safe-action": "^7.9.0",
     "next-themes": "^0.3.0",
     "nuqs": "^1.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "@tanstack/react-table": "^8.20.5",
     "@midday-ai/engine": "^0.1.0-alpha.22",
+    "react-intersection-observer": "^9.13.1",
+    "react-hotkeys-hook": "^4.5.1",
+    "ai": "3.4.0",
+    "@date-fns/tz": "^1.1.2",
+    "little-date": "^1.0.0",
     "zod": "^3.23.8",
     "@hookform/resolvers": "^3.9.0",
     "zod-openapi": "^2.19.0",
@@ -35,6 +42,7 @@
     "use-debounce": "^10.0.3",
     "@uidotdev/usehooks": "^2.4.1",
     "@v1/engine": "workspace:*",
+    "motion-number": "^0.1.7",
     "lottie-react": "^2.4.0",
     "@radix-ui/react-hover-card": "^1.1.1"
   },
