--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -66,10 +66,19 @@
     "./blur-image": "./src/components/blur-image.tsx",
     "./client-only": "./src/components/client-only.tsx",
     "./popup": "./src/components/popup.tsx",
+    "./combobox-dropdown": "./src/components/combobox-dropdown.tsx",
     "./radio-group": "./src/components/radio-group.tsx",
     "./form": "./src/components/form.tsx",
+    "./calendar": "./src/components/calendar.tsx",
+    "./table": "./src/components/table.tsx",
     "./tailwind.config": "./tailwind.config.ts",
+    "./collapsible": "./src/components/collapsible.tsx",
+    "./currency-input": "./src/components/currency-input.tsx",
     "./popover": "./src/components/popover.tsx",
+    "./checkbox": "./src/components/checkbox.tsx",
+    "./sheet": "./src/components/sheet.tsx",
+    "./scroll-area": "./src/components/scroll-area.tsx",
+    "./drawer": "./src/components/drawer.tsx",
     "./filter": "./src/components/filter/index.ts",
     "./max-width-wrapper": "./src/components/max-width-wrapper.tsx",
     "./postcss": "./postcss.config.js"
@@ -82,6 +91,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.0",
+    "react-number-format": "^5.4.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-radio-group": "^1.1.3",
@@ -92,7 +103,9 @@
     "@radix-ui/react-select": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.0",
+    "react-day-picker": "8.10.1",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-icons": "^1.1.0",
     "@tailwindcss/forms": "^0.5.6",
     "class-variance-authority": "^0.7.0",
