--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "geist": "^1.3.1",
     "next": "14.2.7",
     "react": "^18.3.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-dom": "^18.3.1",
     "usehooks-ts": "^3.1.0",
     "react-use-measure": "^2.1.1"
