--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -76,9 +76,13 @@
     "./currency-input": "./src/components/currency-input.tsx",
     "./popover": "./src/components/popover.tsx",
     "./checkbox": "./src/components/checkbox.tsx",
+    "./time-range-input": "./src/components/time-range-input.tsx",
+    "./submit-button": "./src/components/submit-button.tsx",
     "./sheet": "./src/components/sheet.tsx",
     "./scroll-area": "./src/components/scroll-area.tsx",
     "./drawer": "./src/components/drawer.tsx",
+    "./combobox": "./src/components/combobox.tsx",
+    "./carousel": "./src/components/carousel.tsx",
     "./filter": "./src/components/filter/index.ts",
     "./max-width-wrapper": "./src/components/max-width-wrapper.tsx",
     "./postcss": "./postcss.config.js"
@@ -94,16 +98,19 @@
     "@radix-ui/react-checkbox": "^1.1.0",
     "react-number-format": "^5.4.2",
     "@radix-ui/react-progress": "^1.1.0",
+    "react-icons": "^5.3.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-select": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.0",
     "react-day-picker": "8.10.1",
+    "embla-carousel-react": "^8.3.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-icons": "^1.1.0",
