--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -76,6 +76,7 @@
     "./currency-input": "./src/components/currency-input.tsx",
     "./popover": "./src/components/popover.tsx",
     "./checkbox": "./src/components/checkbox.tsx",
+    "./chart": "./src/components/chart.tsx",
     "./time-range-input": "./src/components/time-range-input.tsx",
     "./submit-button": "./src/components/submit-button.tsx",
     "./sheet": "./src/components/sheet.tsx",
@@ -115,6 +116,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-icons": "^1.1.0",
     "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^10.16.16",
     "js-cookie": "^3.0.5",
