--- a/apps/api/supabase/config.toml
+++ b/apps/api/supabase/config.toml
@@ -3,7 +3,7 @@ project_id = "create-v1"
 [api]
 enabled = true
 port = 54321
-schemas = ["public", "storage"]
+schemas = ["public", "storage", "skill_assessment"]
 extra_search_path = ["public"]
 max_rows = 100
 
