--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,8 +1,4 @@
 {
   "version": 2,
-  "public": false,
-  "github": {
-    "enabled": false
-  },
-  "regions": ["fra1", "sfo1", "iad1"]
+  "public": false
 }
