--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,9 @@
     "react-scroll-parallax": "^3.4.5",
     "react-dom": "^18.3.1",
     "usehooks-ts": "^3.1.0",
-    "react-use-measure": "^2.1.1"
+    "react-use-measure": "^2.1.1",
+    "sugar-high": "^0.7.5",
+    "next-mdx-remote": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^22",
