--- a/.github/workflows/production-website.yml
+++ b/.github/workflows/production-website.yml
@@ -11,6 +11,7 @@ on:
     paths:
       - apps/web/**
       - packages/**
+      - "!packages/email/**"
 jobs:
   deploy-production:
     runs-on: ubuntu-latest
