--- a/.github/workflows/production-website.yml
+++ b/.github/workflows/production-website.yml
@@ -1,4 +1,4 @@
-name: Production Deployment - Domotica Architect Website
+name: Production Deployment - Gigflow Web
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
