--- a/.github/workflows/production-website.yml
+++ b/.github/workflows/production-website.yml
@@ -10,7 +10,11 @@ on:
       - main
     paths:
       - apps/web/**
-      - packages/**
+      - packages/jobs/**
+      - packages/supabase/**
+      - packages/ui/**
+      - packages/utils/**
+      - packages/typescript/**
       - "!packages/email/**"
 jobs:
   deploy-production:
