--- a/.github/workflows/supabase-migration.yml
+++ b/.github/workflows/supabase-migration.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   migrate:
     runs-on: ubuntu-latest
+    environment: Production
+
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
