--- a/.github/workflows/production-website.yml
+++ b/.github/workflows/production-website.yml
@@ -37,7 +37,7 @@ jobs:
           TRIGGER_ACCESS_TOKEN: ${{ secrets.TRIGGER_ACCESS_TOKEN }}
         run: |
           TRIGGER_PROJECT_ID=${{ secrets.TRIGGER_PROJECT_ID }} bunx trigger.dev@3.3.7 deploy
-        working-directory: apps/dashboard
+        working-directory: apps/web
       # - name: 🚀 Deploy to Vercel
       #   run: |
       #     bunx vercel deploy --prebuilt --prod --archive=tgz --token=${{ secrets.VERCEL_TOKEN }} > domain.txt
