--- a/.github/workflows/production-website.yml
+++ b/.github/workflows/production-website.yml
@@ -15,13 +15,14 @@ on:
 jobs:
   deploy-production:
     runs-on: ubuntu-latest
+    environment: Production
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
-      - name: Install dependencies
-        run: bun install
+      # - name: Install dependencies
+      #   run: bun install
       # - name: 🔦 Run linter
       #   run: bun run lint --filter=@midday/website
       # - name: 🪐 Check TypeScript
